[formField] fix gap when label is hidden

--- a/packages/scss/src/components/form/mods.scss
+++ b/packages/scss/src/components/form/mods.scss
@@ -361,6 +361,10 @@
 	}
 }
 
+@mixin hiddenLabel {
+	gap: 0;
+}
+
 %isRequired {
 	@layer mods {
 		color: var(--palettes-error-700);
